# time-module

./: README  config.env  setup.cfg  setup.py
get_time/: __init__.py  time_module.py
time_module.egg-info/: PKG-INFO  SOURCES.txt
