[metadata]
name = time_module
version = 0.0.1
description = time auxiliary module
long_description = file: README
long_description_content_type = text/plain
url = https://github.com/Piort-Bogdan/time-module.git
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
py_modules = time_module
install_requires =
    astral==3.2
python_requires = >=3.10
package_dir = =get_time

[options.packages.find]
exclude = tests
